<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.x.search.SearchFragment">

        <TextView
            android:id="@+id/search"
            android:layout_width="96dp"
            android:layout_height="38dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="59dp"
            android:gravity="top"
            android:text="@string/search"
            android:textAppearance="@style/search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/frame_8"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="121dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/search_edittext"
            android:hint="Where Next?"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:ellipsize="end"
            android:maxLines="1" />

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="470dp"
            android:layout_height="237dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame_8">

            <TextView
                android:id="@+id/top_destina"
                android:layout_width="145dp"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:gravity="top"
                android:text="@string/top_destina"
                android:textAppearance="@style/top_destina" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_recycler_view_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/top_destina"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                tools:listitem="@layout/recycler_row_search_1" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/nearby_attr"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:clipToOutline="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

            <TextView
                android:id="@+id/nearby_attr_txt"
                android:layout_width="164dp"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:gravity="top"
                android:text="@string/nearby_attr"
                android:textAppearance="@style/top_destina" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_recycler_view_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/nearby_attr_txt"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

            </androidx.recyclerview.widget.RecyclerView>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>